# ChangeLog for Gentoo base-profile
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/profiles/base/ChangeLog,v 1.608 2013/11/10 22:59:17 chithanh Exp $

  10 Nov 2013; Chí-Thanh Christopher Nguyễn <chithanh@gentoo.org>
  package.use.mask:
  Drop mesa[llvm] mask which lives in individual arch profiles now.

  10 Nov 2013; Michał Górny <mgorny@gentoo.org> package.use.mask:
  Mask USE=sandbox on pypy wrt bug #429372.

  30 Oct 2013; Michał Górny <mgorny@gentoo.org> package.use.force:
  Copy the forced flags to dev-lang/python-exec (the new name).

  27 Oct 2013; Julian Ospald <hasufell@gentoo.org> package.use.mask:
  mask luajit useflag for games-action/minetest

  25 Oct 2013; Davide Pesavento <pesa@gentoo.org> package.use.force:
  Remove obsolete entry.

  21 Oct 2013; Chí-Thanh Christopher Nguyễn <chithanh@gentoo.org>
  package.use.mask:
  Mask mesa i965 driver for security bug #472280.

  15 Sep 2013; Tom Wijsman <TomWij@gentoo.org> package.use.mask:
  Masked JCE functionality of dev-java/diablo-jdk.

  12 Sep 2013; Diego E. Pettenò <flameeyes@gentoo.org> package.use,
  package.use.force:
  Enable ruby20 by default, do not force it.

  07 Sep 2013; Tom Wijsman <TomWij@gentoo.org> package.use.mask:
  net-proxy/swiftiply: Dependency (www-servers/mongrel) currently only works
  with Ruby 1.8; so, masking Ruby 1.9 USE flag until Ruby 1.9 support is added
  to mongrel.

  05 Sep 2013; Michał Górny <mgorny@gentoo.org> package.use.force, use.mask:
  Python 2.5, 3.1, and PyPy 1.9 were removed from the tree.

  01 Sep 2013; Jeff Horelick <jdhore@gentoo.org> package.use.mask:
  mask sid for >=media-plugins/audacious-plugins-3.4

  31 Aug 2013; Julian Ospald <hasufell@gentoo.org> package.use.mask:
  mask custom-cflags for media-libs/libsdl2 since it's unsupported

  27 Aug 2013; Ulrich Müller <ulm@gentoo.org> packages:
  Temporarily add sys-apps/openrc to the system set, until bug 373219 is
  resolved.
