@@ -1,11 +1,0 @@
-DEFINED_PHASES=install test
-DEPEND=>=sci-mathematics/ginac-1.4.1
-DESCRIPTION=A program for reducing Feynman integrals
-EAPI=3
-HOMEPAGE=http://krone.physik.unizh.ch/~cedric/reduze/
-KEYWORDS=~x86
-LICENSE=GPL-3
-RDEPEND=>=sci-mathematics/ginac-1.4.1
-SLOT=0
-SRC_URI=http://krone.physik.unizh.ch/~cedric/reduze/download/reduze-1.2.tar.gz
-_md5_=7d6cb0bb97576eeb78d1983fe14c170c
