@@ -1,13 +1,13 @@
 DEFINED_PHASES=compile configure install prepare test
 DEPEND=>=sci-mathematics/ginac-1.4.1 berkdb? ( sys-libs/db[cxx] ) mpi? ( virtual/mpi ) virtual/pkgconfig doc? ( app-doc/doxygen ) sys-devel/make >=dev-util/cmake-2.8.9 userland_GNU? ( >=sys-apps/findutils-4.4.0 )
 DESCRIPTION=Program for reducing Feynman integrals
-EAPI=4
+EAPI=5
 HOMEPAGE=http://reduze.hepforge.org/
 IUSE=berkdb doc mpi
 KEYWORDS=~amd64 ~x86 ~amd64-linux ~x86-linux
 LICENSE=GPL-3
 RDEPEND=>=sci-mathematics/ginac-1.4.1 berkdb? ( sys-libs/db[cxx] ) mpi? ( virtual/mpi )
 SLOT=0
-SRC_URI=http://reduze.hepforge.org/download/reduze-2.0.8.tar.gz
-_eclasses_=cmake-utils	92319f03251f1235bc887cc84e5aef21	eutils	4878e7f88afc0ba0866ac112190b0fd4	flag-o-matic	65cef1287b9d62b1a0f180765d1e0c69	multilib	892e597faee02a5b94eb02ab512e7622	toolchain-funcs	51e6c948e72c43bcc8edc7544411c953	user	d0a4d0735a6c0183d707ca919bd72f28	versionator	6601b4c5b3f019a993db59a50e1854e4
-_md5_=dbe6e465c5dfab88839e2d7fb7490cfe
+SRC_URI=http://reduze.hepforge.org/download/reduze-2.0.9.tar.gz
+_eclasses_=cmake-utils	92319f03251f1235bc887cc84e5aef21	eutils	4878e7f88afc0ba0866ac112190b0fd4	flag-o-matic	65cef1287b9d62b1a0f180765d1e0c69	multilib	892e597faee02a5b94eb02ab512e7622	toolchain-funcs	51e6c948e72c43bcc8edc7544411c953	user	d0a4d0735a6c0183d707ca919bd72f28
+_md5_=39daffde9993e77019f16261fc22e035
