@@ -1,16 +1,26 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA256
 
-DIST reduze-1.2.tar.gz 552514 SHA256 e9528c7361c9e3917b49bcaca2fe000c11307fd898fe148767946ce08fdc973d
-DIST reduze-2.0.8.tar.gz 568026 SHA256 96fe0c4d9c8a10393d3a6c7aa8c858ad8b4b9bfd5d11b4fa89ade99b4b84ec93 SHA512 3e597d4617272c31d00db011a5057f232d065112b41930ed6427e7cdc5cee668083925b8d28014d675ec5592c00c8a5ea06f05e999303e8b6e974d67359c0925 WHIRLPOOL cbdbd5769487d0d64086c9114ef579e6227e5783c65203a4d558a00dc066750123c7faf50c1ba21acc932938c1d9cbb7e5e25d3d167fae6662d1752010de67b1
-EBUILD reduze-1.2.ebuild 659 SHA256 55b005f14e5e2bdcdf0e16750788e84ad01fcc58333458b16ea901b2b6869e4a SHA512 f1950d9a4103de11dd765402e97a26cfc0dcc7d5a40ad2183ed6ddd4de2e8b75844d52f0e23c4ab666378b6e5e92448dbca6a52c27e209a9691948077f70b33b WHIRLPOOL 008089acec40e13d2cfe6bbae2809a308a91b62a81a8985dfad42236ac6fa9d7109b9eadfabc2aed8297e2b5b8789c0ff786d25bdcef5a5e78e75cb1ea045ce9
-EBUILD reduze-2.0.8.ebuild 1637 SHA256 ab715ffc643cd2bd2db2539a30e00b7006c538e7e5b6b0c1f248cc3601762e75 SHA512 b9cb134e1df3cbba858b50d19f79cba573b89fb3b8acd826dc47b655bd9c995a6dc8bde71a83d4daacac576d37ecee9fbe74e8177550aa9ab5fdf2dfa3828b0c WHIRLPOOL 053e60e1c4ba93c752b6d393e1cad72192dab0aa24fe34f90c0aca0fad8943b65f33497a6c6745d03e70ae627f0c3acdabe2cdc0a1079c3b0c068beba17ea0bd
-MISC ChangeLog 640 SHA256 1f6960112c7a13899f0f7093e92fc7218b3afe130053c3d03ed3965978a08863 SHA512 bcf9fd43fef476f8f03ad7dc0145bb01409e81167f7d6fbc125d3e5a60530171d435bbb3c647a7d36fff0c192f5ab343a19b4200ee3aaf8d29caf9475e1d7d59 WHIRLPOOL 20aa1ccb807661ca1dcc7e0b9bd09089fbd7c26a2462f25122882a268b2afb3e29867e40c92698168e5cd33e53dfecea45e26c8c6e28e8839e7fff68a0ea9061
+DIST reduze-2.0.9.tar.gz 568570 SHA256 e56494519faffa381f16c8c9b439e9c17485392d47b836ef372d3c4ff451e67a SHA512 69818d7edaf3c69996d3f703401865f67722ec8d33b285642c71030f2852273b4b4028a00f0c639589cb801def739f93a05d504d4fb2edf228674962897d5f01 WHIRLPOOL 1aa84d755668badf01c077b3e9c63cf1c68c5f37f438875c3f3de11804013e551a92f98c7aacd5b8ea155e1540023d4273f1ceb98ea4e7551de9fe7613b18021
+EBUILD reduze-2.0.9.ebuild 1496 SHA256 7c7059a978b9eac517399aa56a06ac3a92685456267814f6b4086d99314ff16a SHA512 490fb7c0d2f33af8e6911a197e9d86549dafcb7ef1095a786a9f3dad7751d7d4214498d00d33151a7abde5be64aa6add5acc7a4545f8be9e7b3463e729193900 WHIRLPOOL 4e8833b52f5d50c59f36718abbf3ae2e6c6f735baa38179acdfec13327046efd28359bc33a30b4c2776a5b1a51057063e6ba28e13c15af723818510617eb8f09
+MISC ChangeLog 840 SHA256 684b99df70a9bdd93b6ba39d5d5f65ba126461b39c725a5c280b2c4ca7667925 SHA512 aec87f5661a5c71ed908eac254603816aecf85bf0ee738dea530fccca3b9992d04e47884bed1ab0c1df7a260794d7272b9924e7162ffecdbaa1d00a765e8bce5 WHIRLPOOL a64f7b1c874a568ca2dcee658e1136c93790984bbaa442072731832dc23649a78f796945e84049c133fe903c88ee2fda7d2c53750717a67fc54a888e37366ad6
 MISC metadata.xml 345 SHA256 aacbe71b15d84b9e8aa04467469f9fa30b194dbea1f59fd1de393c20fc74df38 SHA512 04f1f2d789aa900eea1e9e9cc4f52a787f76699080d94cbaef1c8df1be22584ea9cf3849f1772e3bda82de8ef32ead79f120cd48fdb26d1b27a23fdb8a008d5e WHIRLPOOL 75b19b1de215ea971b0f5defec3e09024bd7fe91439873fecf8a82e1217c64664f30b05cf44c6b1bca3bb31b21c019b6585922aca51a8d7b804f6e48e7917a2f
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.19 (GNU/Linux)
+Version: GnuPG v2.0.22 (GNU/Linux)
 
-iEYEAREIAAYFAlAh+VgACgkQ1ycZbhPLE2CW1ACfdFC6CZYH0lBMLPVLyEMyM5J/
-bGMAmgP1ivIbvFRQNHOvglo5px7IdKdL
-=sXD3
+iQJ8BAEBCABmBQJSgkL9XxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQwOEM0RURGNjY5QzVBNjMwRkU3REVCOTQz
+QUZGQ0U5NzREMzRCRDhDAAoJEDr/zpdNNL2MEIwP/14MeKlRke7R2PhQM95WeDHY
+IuYXHB0u/YEZYMjNqTDLAgMx3cw1LBf2qQE71X4CbTP+VT43mQGAv1KO8wLN1XvQ
+iJsO5XF1g19+9GyixjwdHgtlpOm6Pq49JSz5ef4fKA7wZCsoFS4etJfeLxrdHPXS
+HW3HryY7Dic5JC7G+Sq8VDjs4HqfLuZTLti5Oq5geIDLgnbXOjF1PXbS55P2uobe
+R9likgvRGa3JFRvm6br64pqU41OvETTNpHHINT3yQt9WfW57P2OANAE9CpuS6v+E
+5rQDOof669o2hPBZLgdJKhlnOKjPvfKcLkQ9DgKupkLM2vI6TxPpQkXRQp7GMcd2
+JfNlWRHzsE5phBUIs/giXvUH8g7jT3ep3tteaJphZTHV1pY+sAdwbEVF94T610nV
+ubx5vbbwO+HipTGldpMr1mCZBMcDEPMyVFhz1iKRVAJoT2MZq6LtYhpg+7HRsMV7
+N4+seXW2APqcT8p0iJnYArXmzsnV1twE8aheduOmOyBluogJh0NCq4qeH/XjRPJ+
+4mFmVT4LBiO+IF1N+sIw4uXz0Jz/wA/NKfoxL0MlheoFhld563ONx6NJRMRqegfU
+AEdIRoqUB3PNtKNPSfCRRAeb1DgtpjzfJ85YrZbApgVHijBAfmmFv394luyK2nUT
+oyvJqQfk8kUmcyck0AKy
+=ixLi
 -----END PGP SIGNATURE-----
