@@ -1,6 +1,12 @@
 # ChangeLog for sci-physics/reduze
-# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sci-physics/reduze/ChangeLog,v 1.3 2012/08/08 05:29:50 bicatali Exp $
+# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/sci-physics/reduze/ChangeLog,v 1.4 2013/11/12 15:08:47 grozin Exp $
+
+*reduze-2.0.9 (12 Nov 2013)
+
+  12 Nov 2013; Andrey Grozin <grozin@gentoo.org> -reduze-1.2.ebuild,
+  -reduze-2.0.8.ebuild, +reduze-2.0.9.ebuild:
+  Version bump; USE flag berkdb masked. Closing #432356.
 
 *reduze-2.0.8 (08 Aug 2012)
 
