@@ -1,6 +1,10 @@
 # ChangeLog for Gentoo base-profile
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/profiles/base/ChangeLog,v 1.608 2013/11/10 22:59:17 chithanh Exp $
+# $Header: /var/cvsroot/gentoo-x86/profiles/base/ChangeLog,v 1.609 2013/11/12 15:01:49 grozin Exp $
+
+  12 Nov 2013; Andrey Grozin <grozin@gentoo.org>
+  package.use.mask:
+  Mask USE=berkdb on sci-physics/reduze (needs masked db-6.0).
 
   10 Nov 2013; Chí-Thanh Christopher Nguyễn <chithanh@gentoo.org>
   package.use.mask:
